Add description to page

--- a/index.html
+++ b/index.html
@@ -1,3 +1,6 @@
+<!--This is the home page of the diary system that displays information about the author and declaration statement.
+    The links to other pages are also displayed respectively.
+-->
 <!DOCTYPE html>
 <html>
 <head>
