Fix style sheet code
-added the new directory

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ contains details of author, statement and links to other pages accordingly-->
     <meta http-equiv="content-type" content="text/html; charset=utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- External CSS file for the website design-->
-	<link rel="stylesheet" type="text/css" href="style.css"> 
+	<link rel="stylesheet" type="text/css" href="style/style.css"> 
     <title>Home Page</title>
 </head>
 <body>
