Modify navigation bar to center
-center the navigation bar and links

--- a/about.html
+++ b/about.html
@@ -17,12 +17,12 @@ based on FAQ concept page-->
     <h1>Status Posting System</h1>
   </div>
   <!--Navigation bar-->
-    <div class= "navbar">
-        <a href="index.html">Home</a>
-        <a href="poststatusform.php">Post Status</a>
-        <a href="searchstatusform.html">Search Status</a>
-        <a class="active" href="about.html">About</a>
-    </div>
+  <ul class= "navbar">
+    <li><a href="index.html">Home</a></li>   
+    <li><a href="poststatusform.php">Post Status</a></li>
+    <li><a href="searchstatusform.html">Search Status</a></li>
+    <li><a class="active" href="about.html">About</a></li>
+  </ul>
     <br><br>
 
     <!--use accordion(collapsible content) to display the listed questions with answers under them respectively-->
