--- a/index.html
+++ b/index.html
@@ -15,12 +15,13 @@ contains details of author, statement and links to other pages accordingly-->
         <h1>Status Posting System</h1>
     </div>
     <!--Navigation bar-->
-    <div class= "navbar">
-        <a class="active" href="index.html">Home</a>
-        <a href="poststatusform.php">Post Status</a>
-        <a href="searchstatusform.html">Search Status</a>
-        <a href="about.html">About</a>
-    </div>
+    <ul class= "navbar">
+            <li><a class="active" href="index.html">Home</a></li>   
+            <li><a href="poststatusform.php">Post Status</a></li>
+            <li><a href="searchstatusform.html">Search Status</a></li>
+            <li><a href="about.html">About</a></li>
+    </ul>
+
     <!--Content of web page -->
     <div class="content">
         <br><p>Name :  Syahirah Shafiq Lee <br><br>
