--- a/searchstatusform.html
+++ b/searchstatusform.html
@@ -14,12 +14,12 @@
         <h1>Status Posting System</h1>
     </div>
     <!--Navigation bar-->
-    <div class= "navbar">
-        <a href="index.html">Home</a>
-        <a href="poststatusform.php">Post Status</a>
-        <a class="active" href="searchstatusform.html">Search Status</a>
-        <a href="about.html">About</a>
-    </div>
+    <ul class= "navbar">
+        <li><a href="index.html">Home</a></li>   
+        <li><a href="poststatusform.php">Post Status</a></li>
+        <li><a class="active" href="searchstatusform.html">Search Status</a></li>
+        <li><a href="about.html">About</a></li>
+    </ul>
     <!--form that accepts user search input and retrieve data from database-->
     <div class="content">
         <form action="searchstatusprocess.php" method="GET">
