--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
-<!--This is the home page of the diary system for a social networking site
-contains details of author, statement and links to other pages accordingly-->
+<!--This is the home page of the diary system for a social networking site contains 
+    details of author, statement and links to other pages accordingly-->
 <!DOCTYPE html>
 <html>
 <head>
@@ -7,6 +7,7 @@ contains details of author, statement and links to other pages accordingly-->
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- External CSS file for the website design-->
 	<link rel="stylesheet" type="text/css" href="style/style.css"> 
+    <link rel="stylesheet" type="text/css" href="style/form_style.css"> 
     <title>Home Page</title>
 </head>
 <body>
@@ -21,12 +22,11 @@ contains details of author, statement and links to other pages accordingly-->
             <li><a href="searchstatusform.html">Search Status</a></li>
             <li><a href="about.html">About</a></li>
     </ul>
-
     <!--Content of web page -->
     <div class="content">
         <br><p>Name :  Syahirah Shafiq Lee <br><br>
             Student ID : 19065338 <br><br>
-            Email: ybn3442@autuni.ac.nz
+            Email: <a href = "mailto: ybn3442@autuni.ac.nz">ybn3442@autuni.ac.nz</a>
         </p>
         <br>
         <p>
@@ -37,11 +37,9 @@ contains details of author, statement and links to other pages accordingly-->
     </div>
     <!--Footer-->
     <div class="footer">
-        <a href="poststatusform.php">Post a new status</a> | 
-        <a href="searchstatusform.html">Search status</a> |  
-        <a href="about.html">About this assignment</a>
+        <a href="about.html"><button type="button">About the Assignment</button></a>  
+        <a href="searchstatusform.html"><button type="button">Search Status</button></a>  
+        <a href="poststatusform.php"><button type="button">Post a New Status</button></a>
     </div>
-
 </body>
-
 </html>
