--- a/about.html
+++ b/about.html
@@ -34,9 +34,9 @@ based on FAQ concept page-->
 				<dt><strong>Navigation bar</strong></dt>
         <dd>The navigation bar which consists of the 4 main pages was created to make it easier to browse through the website rather than just using the links.</dd>
 				<dt><strong>Accordion tabs</strong></dt>
-				<dd>The accordion tabs are created to contain the answers for each of the questions listed for higher readability and a neater appearance for user.</dd>
-        <dt><strong>Responsive forms</strong></dt>
-				<dd>The post status form and search status form are designed and developed to be responsive so they can accomodate to the browser window size.</dd>
+				<dd>The accordion tabs in About page are created to contain the answers for each of the questions listed for higher readability and a neater appearance for user.</dd>
+        <dt><strong>Responsive layout and form</strong></dt>
+				<dd>The accordion tabs and post status form and search status form are designed and developed to be responsive so they can accomodate to the browser window size.</dd>
 			</dl></p>  
     </div>
 
